# Lavoo-Business-Decision-Engine

./: .dockerignore  .env  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DO_THIS_NOW.md  Dockerfile  Dockerfile.cron-cleanup  Dockerfile.cron-subscriptions  POSTGRESQL_MIGRATION.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_FIX.md  RAILWAY_SINGLE_SERVICE.md  RESTART_BACKEND_NOW.txt  ai_analyst_engine_backup.dump  backend.py  build.sh  check_admin.py  check_db_schema.py  debug_data.py  debug_imports.py  debug_stats_script.py  detailed_schema_check.py  fix_alembic.py  force_ipv4.py  index.html  inspect_data.py  lint.sh  login.json  nixpacks.toml  open.py  package.json  pyproject.toml  pyrightconfig.json  railway-build.sh  railway.json  railway.toml  render.yaml  (+21 more)
.platform-configs/: Procfile  README.md  digitalocean.yaml  railway.toml  render.yaml
ai/: agentic_analyzer.py  analyst.py  analyst_db.py  business_analyzer.py  content_generator.py  recommender.py  recommender_db.py  smart_tools_generator.py
alembic/: env.py
api/: cache.py  main.py
config/: __init__.py  logging.py
cron/: __init__.py  alerts.py  cleanup.py  insights.py  process_beta_billing.py  send_beta_reminders.py  subscription_expiry.py
database/: pg_connections.py  pg_models.py  security_setup.sql
db/: aitugo.db  pg_connections.py  pg_models.py  pg_models.py.bak  security_setup.sql
decision_engine/: agentic_analyzer.py  content_generator.py  recommender_db.py  test_automation_stacks.py  vector_recommender.py
docs/: BILLING_OPERATIONAL_MODEL.md  PCI_Compliance.md  (+2 more)
(+307 files in other folders)
