[project]
name = "ai-business-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cache2[redis]>=0.2.2",
    "mailerlite-api-python>=0.10.0",
    "redis>=4.6.0",
    "sib-api-v3-sdk>=7.6.0",
    "uvloop>=0.22.1",
]
